Added fira code font

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ local.properties
 captures
 .externalNativeBuild
 .cxx
+.kotlin
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
